[gd_scene load_steps=80 format=3 uid="uid://bgmq4knhxggl2"]

[ext_resource type="Script" uid="uid://d3ckaoly0wqvx" path="res://src/player/player.gd" id="1_nxtay"]
[ext_resource type="Texture2D" uid="uid://dodo65m06ibo2" path="res://src/player/art/gun_fire.png" id="2_ry1vw"]
[ext_resource type="Texture2D" uid="uid://dnkewktf1p72v" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_punch_1.png" id="3_0ciyq"]
[ext_resource type="Texture2D" uid="uid://bxhnhc8gdfupa" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_punch_2.png" id="4_nxtay"]
[ext_resource type="Texture2D" uid="uid://7sgw0wgq3tic" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_land_0.png" id="5_ry1vw"]
[ext_resource type="Texture2D" uid="uid://cc2llqjqaeyje" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_land_1.png" id="6_ofvdf"]
[ext_resource type="Texture2D" uid="uid://827laqjm27ml" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_fall_0.png" id="7_t8tid"]
[ext_resource type="Texture2D" uid="uid://3d1eme8jhq2h" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_fall_1.png" id="8_uf2y3"]
[ext_resource type="Texture2D" uid="uid://4nbbodkuypn7" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_use_10.png" id="9_ookyx"]
[ext_resource type="Texture2D" uid="uid://cdxa3b0gdu7o" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_pickup_wall_0.png" id="10_lwyti"]
[ext_resource type="Texture2D" uid="uid://bfg3st6b8i7ft" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_pickup_wall_1.png" id="11_bvqno"]
[ext_resource type="Texture2D" uid="uid://cjcqdxwm4svjj" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_pickup_wall_2.png" id="12_mhgr1"]
[ext_resource type="Texture2D" uid="uid://btg7lpki4l0st" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_pickup_wall_3.png" id="13_4pqc6"]
[ext_resource type="Texture2D" uid="uid://cbvgx5ayysofk" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_idle_0.png" id="14_l1klo"]
[ext_resource type="Texture2D" uid="uid://bxqyo44gttuwu" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_idle_1.png" id="15_iiwwb"]
[ext_resource type="Texture2D" uid="uid://c1gx1sjmps514" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_idle_2.png" id="16_80cse"]
[ext_resource type="Texture2D" uid="uid://thgr4gr4pepa" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_idle_3.png" id="17_d2nkp"]
[ext_resource type="Texture2D" uid="uid://b1x6miakkkg5n" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_idle_4.png" id="18_x3vss"]
[ext_resource type="Texture2D" uid="uid://cvx62r8j8fupm" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_idle_5.png" id="19_ay5fu"]
[ext_resource type="Texture2D" uid="uid://b5ikfqlxd4l6t" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_idle_6.png" id="20_gy80w"]
[ext_resource type="Texture2D" uid="uid://dy1d8vcahumil" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_idle_7.png" id="21_aa0qk"]
[ext_resource type="Texture2D" uid="uid://bu8efw2vw8ml" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_use_00.png" id="22_vqhul"]
[ext_resource type="Texture2D" uid="uid://dfxavris4og17" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_use_01.png" id="23_2w4d0"]
[ext_resource type="Texture2D" uid="uid://bcvtn3evgv3qk" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_use_02.png" id="24_ys8ye"]
[ext_resource type="Texture2D" uid="uid://p41f4yhe130f" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_use_03.png" id="25_d3yp2"]
[ext_resource type="Texture2D" uid="uid://bh2xng5irwx8a" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_use_04.png" id="26_wxix0"]
[ext_resource type="Texture2D" uid="uid://fc7wjb0ip1ig" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_use_05.png" id="27_fktfr"]
[ext_resource type="Texture2D" uid="uid://dbb41jxxgkpxw" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_use_06.png" id="28_y7rv6"]
[ext_resource type="Texture2D" uid="uid://8q0sqfe5gskp" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_use_07.png" id="29_0deqi"]
[ext_resource type="Texture2D" uid="uid://nxsx4axg2ub" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_use_08.png" id="30_qrtsd"]
[ext_resource type="Texture2D" uid="uid://b8n1uya27wrce" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_use_09.png" id="31_yscai"]
[ext_resource type="Texture2D" uid="uid://sbo0882njjjc" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_use_11.png" id="32_81fc5"]
[ext_resource type="Texture2D" uid="uid://cipmm1a3ek6nv" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_use_12.png" id="33_bhcsj"]
[ext_resource type="Texture2D" uid="uid://b2bx2a56wtsi5" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_jump_0.png" id="34_maoa1"]
[ext_resource type="Texture2D" uid="uid://dukpcnak5ir6e" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_jump_1.png" id="35_ydxno"]
[ext_resource type="Texture2D" uid="uid://cd1kmvo847l87" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_walk_0.png" id="36_b5wsf"]
[ext_resource type="Texture2D" uid="uid://b8i1pr67jxgx8" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_walk_1.png" id="37_y813h"]
[ext_resource type="Texture2D" uid="uid://78w2f6mkwxdw" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_walk_2.png" id="38_w7elw"]
[ext_resource type="Texture2D" uid="uid://bfnsbj6e6ax1g" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_walk_3.png" id="39_0tx5d"]
[ext_resource type="Texture2D" uid="uid://b0g4tyy8ixsii" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_walk_4.png" id="40_472vb"]
[ext_resource type="Texture2D" uid="uid://cah7ima6p0cs0" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_walk_5.png" id="41_caf4x"]
[ext_resource type="Texture2D" uid="uid://bkd0krata2fmi" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_walk_6.png" id="42_byw8w"]
[ext_resource type="Texture2D" uid="uid://b2etd0nkq8ori" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_walk_7.png" id="43_6b5pt"]
[ext_resource type="Texture2D" uid="uid://csfefp65amq5y" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_pickup_ground_1.png" id="44_klbvx"]
[ext_resource type="Texture2D" uid="uid://w8jh8hi51prl" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_pickup_ground_2.png" id="45_5nemg"]
[ext_resource type="Texture2D" uid="uid://bxek7xo1x2o36" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_pickup_ground_3.png" id="46_4xchl"]
[ext_resource type="Texture2D" uid="uid://o487h5ucuw03" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_pickup_ground_4.png" id="47_7h6ad"]
[ext_resource type="Texture2D" uid="uid://uo18ke4up2kc" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_pickup_ground_5.png" id="48_i74fg"]
[ext_resource type="Texture2D" uid="uid://j3bogm3mrntr" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_pickup_ground_6.png" id="49_5cw6e"]
[ext_resource type="Texture2D" uid="uid://c8nw57evqtpsh" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_punch_0.png" id="50_8gqt0"]
[ext_resource type="Texture2D" uid="uid://dpfp5viy2bt5h" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_punch_3.png" id="51_36uka"]
[ext_resource type="Texture2D" uid="uid://b0xhy6j1bpc00" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_punch_4.png" id="52_rwhq2"]
[ext_resource type="Texture2D" uid="uid://dmjdtasitcaye" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_punch_5.png" id="53_0bix0"]
[ext_resource type="Texture2D" uid="uid://b6mllb3qqnd2f" path="res://src/mp_character_animation_asset_pack_v1.0/Exported PNGs/Female/Character 1/Clothes 2/Character1F_2_damage_1.png" id="54_b4hxv"]
[ext_resource type="PackedScene" uid="uid://bsgtr5x44hma2" path="res://src/state_machine/state_machine.tscn" id="56_tm7ly"]
[ext_resource type="Script" uid="uid://d3pjh5homp0od" path="res://src/state_machine/states/idle.gd" id="57_6mm0a"]
[ext_resource type="Script" uid="uid://cqf5mxqq4tamh" path="res://src/state_machine/states/jump.gd" id="58_4pd0q"]
[ext_resource type="Script" uid="uid://cwgxgp3um8snh" path="res://src/state_machine/states/fall.gd" id="59_un28a"]
[ext_resource type="Script" uid="uid://bhoe44nnogu2e" path="res://src/state_machine/states/move.gd" id="60_qsw43"]
[ext_resource type="Script" uid="uid://c43hb5ymostke" path="res://src/state_machine/states/dash.gd" id="61_v2jc2"]
[ext_resource type="Script" uid="uid://c80tfx3bxs3y5" path="res://src/state_machine/states/airdash.gd" id="62_8nas5"]
[ext_resource type="Script" uid="uid://dir2l702e3m2j" path="res://src/state_machine/states/pivot.gd" id="63_jvtrp"]
[ext_resource type="Script" uid="uid://ry2uuqknlofc" path="res://src/state_machine/states/single_pivot.gd" id="64_x4pil"]
[ext_resource type="Script" uid="uid://b14ap6t5hdkds" path="res://src/state_machine/states/freeze.gd" id="65_3iaxw"]
[ext_resource type="Script" uid="uid://b1uh6flyadwbd" path="res://src/state_machine/states/switch_main.gd" id="66_tduew"]
[ext_resource type="Script" uid="uid://cqgik6cs7nioe" path="res://src/state_machine/states/wall_cling.gd" id="67_lypyk"]
[ext_resource type="Script" uid="uid://o7jip3xldsrq" path="res://src/state_machine/states/wall_jump.gd" id="68_wfsgb"]
[ext_resource type="Script" uid="uid://b23q2dyajqi25" path="res://src/state_machine/states/thrown.gd" id="69_rvwfg"]
[ext_resource type="Script" uid="uid://dv4hw4drf1pch" path="res://src/state_machine/states/throw.gd" id="70_bamio"]
[ext_resource type="Script" uid="uid://bmc2ip0hujwtr" path="res://src/state_machine/states/interact.gd" id="71_ktofy"]
[ext_resource type="Script" uid="uid://6pt4ld3ek85e" path="res://src/player/gun_states/idle.gd" id="72_nv538"]
[ext_resource type="Script" uid="uid://bo2hr5ukvopsj" path="res://src/player/gun_states/firing.gd" id="73_jyb6v"]
[ext_resource type="Script" uid="uid://1llx6wo7g26u" path="res://src/player/gun_states/charging.gd" id="74_alpte"]
[ext_resource type="Script" uid="uid://dgc26uc0vkbrm" path="res://src/player/player_move_component.gd" id="75_4qyag"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4bkl8"]
atlas = ExtResource("2_ry1vw")
region = Rect2(128, 40, 128, 29)

[sub_resource type="SpriteFrames" id="SpriteFrames_3ge0c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"fire",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bkl8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"smoke",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_l17t8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0ciyq")
}, {
"duration": 1.0,
"texture": ExtResource("4_nxtay")
}],
"loop": true,
"name": &"airdash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ry1vw")
}, {
"duration": 1.0,
"texture": ExtResource("6_ofvdf")
}],
"loop": true,
"name": &"crouch",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_t8tid")
}, {
"duration": 1.0,
"texture": ExtResource("8_uf2y3")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_ookyx")
}],
"loop": true,
"name": &"freeze",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_lwyti")
}, {
"duration": 1.0,
"texture": ExtResource("10_lwyti")
}, {
"duration": 1.0,
"texture": ExtResource("11_bvqno")
}, {
"duration": 1.0,
"texture": ExtResource("12_mhgr1")
}, {
"duration": 1.0,
"texture": ExtResource("13_4pqc6")
}, {
"duration": 1.0,
"texture": ExtResource("13_4pqc6")
}, {
"duration": 1.0,
"texture": ExtResource("12_mhgr1")
}, {
"duration": 1.0,
"texture": ExtResource("11_bvqno")
}, {
"duration": 1.0,
"texture": ExtResource("10_lwyti")
}, {
"duration": 1.0,
"texture": ExtResource("10_lwyti")
}],
"loop": true,
"name": &"ground_pivot",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_l1klo")
}, {
"duration": 1.0,
"texture": ExtResource("15_iiwwb")
}, {
"duration": 1.0,
"texture": ExtResource("16_80cse")
}, {
"duration": 1.0,
"texture": ExtResource("17_d2nkp")
}, {
"duration": 1.0,
"texture": ExtResource("18_x3vss")
}, {
"duration": 1.0,
"texture": ExtResource("19_ay5fu")
}, {
"duration": 1.0,
"texture": ExtResource("20_gy80w")
}, {
"duration": 1.0,
"texture": ExtResource("21_aa0qk")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_vqhul")
}, {
"duration": 1.0,
"texture": ExtResource("23_2w4d0")
}, {
"duration": 1.0,
"texture": ExtResource("24_ys8ye")
}, {
"duration": 1.0,
"texture": ExtResource("25_d3yp2")
}, {
"duration": 1.0,
"texture": ExtResource("26_wxix0")
}, {
"duration": 1.0,
"texture": ExtResource("27_fktfr")
}, {
"duration": 1.0,
"texture": ExtResource("28_y7rv6")
}, {
"duration": 1.0,
"texture": ExtResource("29_0deqi")
}, {
"duration": 1.0,
"texture": ExtResource("30_qrtsd")
}, {
"duration": 1.0,
"texture": ExtResource("31_yscai")
}, {
"duration": 1.0,
"texture": ExtResource("9_ookyx")
}, {
"duration": 1.0,
"texture": ExtResource("32_81fc5")
}, {
"duration": 1.0,
"texture": ExtResource("33_bhcsj")
}],
"loop": false,
"name": &"interact",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("34_maoa1")
}, {
"duration": 1.0,
"texture": ExtResource("35_ydxno")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ry1vw")
}, {
"duration": 1.0,
"texture": ExtResource("6_ofvdf")
}, {
"duration": 1.0,
"texture": ExtResource("34_maoa1")
}, {
"duration": 1.0,
"texture": ExtResource("35_ydxno")
}, {
"duration": 1.0,
"texture": ExtResource("6_ofvdf")
}, {
"duration": 1.0,
"texture": ExtResource("5_ry1vw")
}],
"loop": true,
"name": &"main_switch",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("36_b5wsf")
}, {
"duration": 1.0,
"texture": ExtResource("37_y813h")
}, {
"duration": 1.0,
"texture": ExtResource("38_w7elw")
}, {
"duration": 1.0,
"texture": ExtResource("39_0tx5d")
}, {
"duration": 1.0,
"texture": ExtResource("40_472vb")
}, {
"duration": 1.0,
"texture": ExtResource("41_caf4x")
}, {
"duration": 1.0,
"texture": ExtResource("42_byw8w")
}, {
"duration": 1.0,
"texture": ExtResource("43_6b5pt")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("44_klbvx")
}, {
"duration": 1.0,
"texture": ExtResource("45_5nemg")
}, {
"duration": 1.0,
"texture": ExtResource("46_4xchl")
}, {
"duration": 1.0,
"texture": ExtResource("47_7h6ad")
}, {
"duration": 1.0,
"texture": ExtResource("48_i74fg")
}, {
"duration": 1.0,
"texture": ExtResource("49_5cw6e")
}],
"loop": true,
"name": &"sub_switch",
"speed": 10.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("50_8gqt0")
}, {
"duration": 0.5,
"texture": ExtResource("3_0ciyq")
}, {
"duration": 0.5,
"texture": ExtResource("4_nxtay")
}, {
"duration": 0.5,
"texture": ExtResource("51_36uka")
}, {
"duration": 0.5,
"texture": ExtResource("52_rwhq2")
}, {
"duration": 0.5,
"texture": ExtResource("53_0bix0")
}],
"loop": true,
"name": &"throw_left",
"speed": 10.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("50_8gqt0")
}, {
"duration": 0.5,
"texture": ExtResource("3_0ciyq")
}, {
"duration": 0.5,
"texture": ExtResource("4_nxtay")
}, {
"duration": 0.5,
"texture": ExtResource("51_36uka")
}, {
"duration": 0.5,
"texture": ExtResource("52_rwhq2")
}, {
"duration": 0.5,
"texture": ExtResource("53_0bix0")
}],
"loop": true,
"name": &"throw_right",
"speed": 10.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("23_2w4d0")
}, {
"duration": 0.5,
"texture": ExtResource("24_ys8ye")
}, {
"duration": 0.5,
"texture": ExtResource("31_yscai")
}, {
"duration": 0.5,
"texture": ExtResource("31_yscai")
}, {
"duration": 0.5,
"texture": ExtResource("24_ys8ye")
}, {
"duration": 0.5,
"texture": ExtResource("23_2w4d0")
}],
"loop": true,
"name": &"throw_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("54_b4hxv")
}],
"loop": true,
"name": &"thrown",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("38_w7elw")
}],
"loop": true,
"name": &"wall_cling",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f7f80"]
size = Vector2(12, 31)

[sub_resource type="CircleShape2D" id="CircleShape2D_fd7k5"]
radius = 24.0

[node name="green_player" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 513
safe_margin = 0.1
script = ExtResource("1_nxtay")

[node name="gun_animations" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3ge0c")
animation = &"fire"

[node name="movement_animations" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_l17t8")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.305315

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_f7f80")

[node name="object_collision" type="Area2D" parent="."]
collision_mask = 610

[node name="CollisionShape2D" type="CollisionShape2D" parent="object_collision"]
shape = SubResource("CircleShape2D_fd7k5")

[node name="movement_state_machine" parent="." node_paths=PackedStringArray("starting_state") instance=ExtResource("56_tm7ly")]
starting_state = NodePath("idle")

[node name="idle" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("dash_state", "fall_state", "jump_state", "move_state", "pivot_state", "single_pivot_state", "interact_state", "throw_state", "thrown_state", "frozen_state", "switch_state")]
script = ExtResource("57_6mm0a")
dash_state = NodePath("../dash")
fall_state = NodePath("../fall")
jump_state = NodePath("../jump")
move_state = NodePath("../move")
pivot_state = NodePath("../pivot")
single_pivot_state = NodePath("../single_pivot")
interact_state = NodePath("../interact")
throw_state = NodePath("../throw")
thrown_state = NodePath("../thrown")
frozen_state = NodePath("../freeze")
switch_state = NodePath("../switch_main")
animation_name = "idle"

[node name="jump" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("fall_state", "jump_state", "idle_state", "move_state", "airdash_state", "interact_state", "throw_state", "thrown_state", "frozen_state", "wall_cling_state")]
script = ExtResource("58_4pd0q")
fall_state = NodePath("../fall")
jump_state = NodePath(".")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
airdash_state = NodePath("../airdash")
interact_state = NodePath("../interact")
throw_state = NodePath("../throw")
thrown_state = NodePath("../thrown")
frozen_state = NodePath("../freeze")
wall_cling_state = NodePath("../wall_cling")
animation_name = "jump"

[node name="fall" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("idle_state", "move_state", "airdash_state", "interact_state", "throw_state", "thrown_state", "frozen_state", "jump_state", "wall_cling_state")]
script = ExtResource("59_un28a")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
airdash_state = NodePath("../airdash")
interact_state = NodePath("../interact")
throw_state = NodePath("../throw")
thrown_state = NodePath("../thrown")
frozen_state = NodePath("../freeze")
jump_state = NodePath("../jump")
wall_cling_state = NodePath("../wall_cling")
animation_name = "fall"

[node name="move" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("dash_state", "fall_state", "idle_state", "jump_state", "airdash_state", "interact_state", "throw_state", "thrown_state", "frozen_state", "switch_state")]
script = ExtResource("60_qsw43")
dash_state = NodePath("../dash")
fall_state = NodePath("../fall")
idle_state = NodePath("../idle")
jump_state = NodePath("../jump")
airdash_state = NodePath("../airdash")
interact_state = NodePath("../interact")
throw_state = NodePath("../throw")
thrown_state = NodePath("../thrown")
frozen_state = NodePath("../freeze")
switch_state = NodePath("../switch_main")
animation_name = "move"

[node name="dash" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("move_state", "fall_state", "idle_state", "jump_state")]
script = ExtResource("61_v2jc2")
move_state = NodePath("../move")
fall_state = NodePath("../fall")
idle_state = NodePath("../idle")
jump_state = NodePath("../jump")
animation_name = "crouch"
move_speed = 384.0

[node name="airdash" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("move_state", "fall_state", "idle_state", "jump_state")]
script = ExtResource("62_8nas5")
move_state = NodePath("../move")
fall_state = NodePath("../fall")
idle_state = NodePath("../idle")
jump_state = NodePath("../jump")
animation_name = "airdash"
move_speed = 384.0

[node name="pivot" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("idle_state", "fall_state")]
script = ExtResource("63_jvtrp")
idle_state = NodePath("../idle")
fall_state = NodePath("../fall")
animation_name = "ground_pivot"

[node name="single_pivot" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("idle_state", "fall_state")]
script = ExtResource("64_x4pil")
idle_state = NodePath("../idle")
fall_state = NodePath("../fall")
animation_name = "ground_pivot"

[node name="freeze" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("idle_state", "fall_state", "move_state", "jump_state")]
script = ExtResource("65_3iaxw")
idle_state = NodePath("../idle")
fall_state = NodePath("../fall")
move_state = NodePath("../move")
jump_state = NodePath("../jump")
animation_name = "freeze"

[node name="switch_main" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("idle_state", "fall_state")]
script = ExtResource("66_tduew")
idle_state = NodePath("../idle")
fall_state = NodePath("../fall")
animation_name = "main_switch"

[node name="wall_cling" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("idle_state", "wall_jump_state", "fall_state")]
script = ExtResource("67_lypyk")
idle_state = NodePath("../idle")
wall_jump_state = NodePath("../wall_jump")
fall_state = NodePath("../fall")
animation_name = "wall_cling"

[node name="wall_jump" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("fall_state", "jump_state", "idle_state", "move_state", "airdash_state", "interact_state", "throw_state", "thrown_state", "frozen_state")]
script = ExtResource("68_wfsgb")
fall_state = NodePath("../fall")
jump_state = NodePath("../jump")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
airdash_state = NodePath("../airdash")
interact_state = NodePath("../interact")
throw_state = NodePath("../throw")
thrown_state = NodePath("../thrown")
frozen_state = NodePath("../freeze")
animation_name = "jump"

[node name="thrown" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("idle_state", "fall_state", "move_state")]
script = ExtResource("69_rvwfg")
idle_state = NodePath("../idle")
fall_state = NodePath("../fall")
move_state = NodePath("../move")
animation_name = "thrown"

[node name="throw" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("idle_state", "fall_state")]
script = ExtResource("70_bamio")
idle_state = NodePath("../idle")
fall_state = NodePath("../fall")
animation_name = "throw_up"

[node name="interact" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("idle_state", "fall_state", "jump_state", "move_state")]
script = ExtResource("71_ktofy")
idle_state = NodePath("../idle")
fall_state = NodePath("../fall")
jump_state = NodePath("../jump")
move_state = NodePath("../move")
animation_name = "interact"

[node name="gun_state_machine" parent="." node_paths=PackedStringArray("starting_state") instance=ExtResource("56_tm7ly")]
starting_state = NodePath("idle")

[node name="idle" type="Node" parent="gun_state_machine" node_paths=PackedStringArray("firing_state")]
script = ExtResource("72_nv538")
firing_state = NodePath("../firing")
animation_name = "idle"

[node name="firing" type="Node" parent="gun_state_machine" node_paths=PackedStringArray("charging_state")]
script = ExtResource("73_jyb6v")
charging_state = NodePath("../charging")
animation_name = "fire"

[node name="charging" type="Node" parent="gun_state_machine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("74_alpte")
idle_state = NodePath("../idle")
animation_name = "smoke"

[node name="player_move_component" type="Node" parent="."]
script = ExtResource("75_4qyag")

[connection signal="area_entered" from="object_collision" to="." method="_on_object_collision_area_entered"]
[connection signal="area_exited" from="object_collision" to="." method="_on_object_collision_area_exited"]
[connection signal="body_entered" from="object_collision" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="object_collision" to="." method="_on_area_2d_body_exited"]
